--- a/style.css
+++ b/style.css
@@ -28,16 +28,16 @@ header,
 main,
 aside,
 footer {
-  background: rgba (255, 255, 255, 0.5);
+  background: white;
   border-radius: 10px;
-  /* opacity: 0.9; */
+  opacity: 0.7;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 header:hover, main:hover, aside:hover, footer:hover {
-  background: rgba(92, 194, 216, 0.5);
+  background: rgba(92, 194, 216, 0.3);
   /* opacity: 0.8; */
  }
 
