--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: "Ubuntu", sans-serif;
   font-size: larger;
   color: black;
-  background-image: url("hardware.jpg");
+  background-image: url("hardware2.png");
   background-repeat: no-repeat;
   background-position: left;
 
